--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -35,6 +35,8 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qrcode": "^0.3.6",
     "react-router-dom": "^6.20.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.12.1",
     "swiper": "^11.1.15",
